--- a/M02_introprogramación/Practica.ipynb
+++ b/M02_introprogramación/Practica.ipynb
@@ -11,8 +11,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Primeros pasos en Python"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola Mundo!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hola Mundo!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -51,6 +75,15 @@
     "    print(a)\n",
     "    a -= 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -69,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
