--- a/M03_variablesydatos/Prep_Course_Homework_03.ipynb
+++ b/M03_variablesydatos/Prep_Course_Homework_03.ipynb
@@ -44,10 +44,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 8.5\n",
+    "type(a)"
+   ]
   },
   {
    "attachments": {},
@@ -59,10 +73,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 8\n",
+    "type(x)"
+   ]
   },
   {
    "attachments": {},
@@ -74,10 +102,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "James\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombre1 = 'James'\n",
+    "print(nombre1)"
+   ]
   },
   {
    "attachments": {},
@@ -89,10 +128,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f = 7j\n"
+   ]
   },
   {
    "attachments": {},
@@ -104,10 +145,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "complex"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(f)"
+   ]
   },
   {
    "attachments": {},
@@ -122,7 +176,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "p = 3.1416\n"
+   ]
   },
   {
    "attachments": {},
@@ -134,10 +190,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = 'True'\n",
+    "b = True\n",
+    "# No son lo mismo, por la variable \"a\" es un string porque lleva comillas y la variable \"b\" es bool."
+   ]
   },
   {
    "attachments": {},
@@ -149,10 +209,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(a))\n",
+    "print(type(b))"
+   ]
   },
   {
    "attachments": {},
@@ -164,10 +236,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 5 \n",
+    "s += 3.3\n",
+    "print(s)"
+   ]
   },
   {
    "attachments": {},
@@ -179,10 +263,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(14+17j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "c1 = 8 + 2j\n",
+    "c2 += 6 + 3j\n",
+    "print(c1 + c2)"
+   ]
   },
   {
    "attachments": {},
@@ -194,10 +290,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(14.4+15j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = c2 + 8.4\n",
+    "print(f)"
+   ]
   },
   {
    "attachments": {},
@@ -209,10 +316,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = 3\n",
+    "b *= 6\n",
+    "print(b)"
+   ]
   },
   {
    "attachments": {},
@@ -224,10 +343,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "256\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 2\n",
+    "x **=8\n",
+    "print(x)"
+   ]
   },
   {
    "attachments": {},
@@ -239,10 +370,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 27\n",
+    "b = 4\n",
+    "print(a / b)"
+   ]
   },
   {
    "attachments": {},
@@ -254,10 +397,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a // b)"
+   ]
   },
   {
    "attachments": {},
@@ -269,10 +422,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a % b)"
+   ]
   },
   {
    "attachments": {},
@@ -284,10 +447,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
+   "source": [
+    "op = 4\n",
+    "print(op * 6 + 3)\n"
+   ]
   },
   {
    "attachments": {},
@@ -299,10 +473,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num1 Num2\n"
+     ]
+    }
+   ],
+   "source": [
+    "alfa1 = \"Num1 \"\n",
+    "alfa2 = \"Num2\"\n",
+    "print(alfa1 + alfa2)"
+   ]
   },
   {
    "attachments": {},
@@ -314,10 +500,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = \"2\"\n",
+    "b = 2\n",
+    "# false porque la variable a es string y la variable b es int\n",
+    "a == b"
+   ]
   },
   {
    "attachments": {},
@@ -329,10 +531,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = int(a)\n",
+    "d == b"
+   ]
   },
   {
    "attachments": {},
@@ -347,7 +563,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# porque Python solo entiende como decimal el signo punto \".\" y no la coma \",\""
+   ]
   },
   {
    "attachments": {},
@@ -359,10 +577,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = 3\n",
+    "v-= 1\n",
+    "print(v)"
+   ]
   },
   {
    "attachments": {},
@@ -374,10 +604,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 << 2\n",
+    "# '''porque se le está indicando que desplace la posicion dos veces a la izquierda, y esa posición representa el 2 y está elevada a la potencia 2, por tanto el resultado es 4'''"
+   ]
   },
   {
    "attachments": {},
@@ -389,10 +633,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39m2\u001b[39;49m \u001b[39m+\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39m2\u001b[39;49m\u001b[39m'\u001b[39;49m \u001b[39m# '''porque uno es entero y el otro string. Si son del mismo tipo, no arrojaría el mismo resultado.'''\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "2 + '2' # '''porque uno es entero y el otro string. Si son del mismo tipo, no arrojaría el mismo resultado.'''"
+   ]
   },
   {
    "attachments": {},
@@ -404,10 +662,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Soy exitoso, Soy exitoso, '"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Soy exitoso, \" *2"
+   ]
   }
  ],
  "metadata": {
